# fff.nvim

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: nix.yml  panvimdoc.yaml  release.yaml  rust.yml
doc/: fff.nvim.txt
lua/fff/: fuzzy.lua  git_utils.lua  main.lua  picker_ui.lua  state.lua  utils.lua
lua/fff/file_picker/: icons.lua  image.lua  init.lua  preview.lua
lua/fff/rust/: background_watcher.rs  error.rs  file_key.rs  file_picker.rs  frecency.rs  git.rs  init.lua  lib.rs  path_utils.rs  score.rs  tracing.rs  types.rs
plugin/: fff.lua
