[package]
name = "fff_nvim"
version = "0.1.0"
edition = "2021"

[lib]
path = "lua/fff/rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test_watcher"
path = "src/bin/test_watcher.rs"

[[bin]]
name = "jemalloc_profile"
path = "src/bin/jemalloc_profile.rs"


[dependencies]
blake3 = "1.8.2"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4.2"
git2 = "0.20.2"
heed = "0.22.0"
ignore = "0.4.22"
mimalloc = "0.1.47"

mlua = { version = "0.11.1", features = ["module", "luajit"] }
neo_frizbee = { version = "0.6.0" }
notify = "8.1.0"
notify-debouncer-mini = "0.7"
once_cell = "1.20.2"
openssl = { version = "0.10", features = ["vendored"] }
pathdiff = "0.2.1"
rayon = "1.8.0"
thiserror = "2.0.10"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
